Change baseurl in config file
Updated baseurl to reflect new portfolio path.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: "Chris Chow"
 description: "Academic portfolio"
 url: "https://chrischow1.github.io"
-baseurl: "/portfolio-template"
+baseurl: "/PersonalPortfolioWebsite"
 
 markdown: kramdown
 kramdown:
