Modify navbar and update profile details
Updated navigation links and profile information.

--- a/_config.yml
+++ b/_config.yml
@@ -22,25 +22,28 @@ permalink: pretty
 nav:
   - title: "Home"
     url: "/"
-  - title: "Papers"
-    url: "/papers/"
+  - title: "SKills"
+    url: "/skills/"
   - title: "Projects"
     url: "/projects/"
-  - title: "Experience"
-    url: "/experience/"
+  - title: "Work Experience"
+    url: "/work_experience/"
   - title: "Resume"
     url: "/resume/"
 
 # Profile info
 profile:
-  name: "Your Name"
-  title: "PhD Candidate in Computer Science"
-  affiliation: "Your University"
-  email: "you@university.edu"
-  location: "City, Country"
-  website: "https://yourdomain.com"
-  github: "https://github.com/yourname"
-  scholar: "https://scholar.google.com"
+  name: "Chris Chow"  
+  title: "M.S. Electrical Engineering Student"
+  affiliation: "California State Polytechnic University, Pomona"
+  education: "B.S. Electrical Engineering, California State University, Fullerton"
+  primary_email: "chriscc0719@gmail.com"
+  work_email: "ch0wcc19@gmail.com"
+  school_email: "chrischow1@cpp.edu"
+  phone: "+1 (626) 679-7202"
+  location: "Hacienda Heights, CA"
+  linkedin: "https://www.linkedin.com/in/chris-chow-108b6b224"
+  github: "https://github.com/chrischow1"
   headshot: "/assets/img/headshot.svg"
 
 # Footer
